@@ -635,30 +635,26 @@ end subroutine evaluate
 
 
 !   Added 1/1/2016 to get consistency between 2D,3D,Cyl,Tor
-subroutine tpi_factors(tpifac,tpirzero,tpirzero2)
+subroutine tpi_factors(tpifac,tpirzero)
   use basic
   use math
   implicit none
-  real, intent(out) :: tpifac, tpirzero,tpirzero2
+  real, intent(out) :: tpifac, tpirzero
   if(nplanes.eq.1) then
      if(itor.eq.1) then
         tpifac = 1.
         tpirzero = 1.
-        tpirzero2 = 1
      else
         tpifac = 1./rzero
         tpirzero = 1.
-        tpirzero2 = rzero
      endif
   else
      if(itor.eq.1) then
         tpifac = twopi
         tpirzero = twopi
-        tpirzero2 = twopi
      else
         tpifac = twopi
         tpirzero = twopi*rzero
-        tpirzero2 = twopi*rzero**2
      endif
   endif
 end subroutine tpi_factors
@@ -689,7 +685,7 @@ subroutine calculate_scalars()
 
   integer :: itri, numelms, def_fields, ier
   integer :: is_edge(3)  ! is inode on boundary
-  real :: n(2,3),tpifac,tpirzero,tpirzero2
+  real :: n(2,3),tpifac,tpirzero
   integer :: iedge, idim(3), izone, izonedim, i, j
   real, dimension(OP_NUM) :: dum1
   vectype, dimension(MAX_PTS) :: mr
@@ -697,7 +693,7 @@ subroutine calculate_scalars()
 
   integer :: ip
 
-  call tpi_factors(tpifac,tpirzero,tpirzero2)
+  call tpi_factors(tpifac,tpirzero)
 
   ptoto = ptot
 
@@ -790,7 +786,7 @@ subroutine calculate_scalars()
 #endif
 
      if(imulti_region.eq.1 .and. izone.eq.2) then
-        wallcur = wallcur - int2(ri2_79,pst79(:,OP_GS))/tpirzero2   ! changed from tpifac on 1/23/21 scj
+        wallcur = wallcur - int2(ri2_79,pst79(:,OP_GS))/tpirzero
 
         call jxb_r(temp79a, temp79d)
         call jxb_phi(temp79b)
@@ -873,8 +869,8 @@ subroutine calculate_scalars()
      parea  = parea  + int2(ri_79,mr)/tpirzero
 
      ! toroidal current
-     totcur = totcur - int2(ri2_79,pst79(:,OP_GS))/tpirzero2
-     pcur   = pcur   - int3(ri2_79,pst79(:,OP_GS),mr)/tpirzero2
+     totcur = totcur - int2(ri2_79,pst79(:,OP_GS))/tpirzero
+     pcur   = pcur   - int3(ri2_79,pst79(:,OP_GS),mr)/tpirzero
 #ifdef USE3D
      pcur_co = pcur_co - int4(ri2_79,pst79(:,OP_GS),mr,co)/tpirzero * 2.
      pcur_sn = pcur_sn - int4(ri2_79,pst79(:,OP_GS),mr,sn)/tpirzero * 2.
@@ -915,8 +911,8 @@ subroutine calculate_scalars()
      recprad = recprad + twopi*int1(recprad79(:,OP_1))/tpifac
      
      if(irunaway.gt.0) then
-        totre = totre + int2(ri_79,nre179(:,OP_1))/tpirzero2
-        totre = totre + int2(ri_79,nre079(:,OP_1))/tpirzero2
+        totre = totre + int2(ri_79,nre179(:,OP_1))/tpirzero
+        totre = totre + int2(ri_79,nre079(:,OP_1))/tpirzero
      end if
 
      helicity = helicity &
@@ -1122,12 +1118,12 @@ subroutine calculate_Lor_vol()
 
   integer :: itri, numelms, ier
   integer :: is_edge(3)  ! is inode on boundary
-  real :: tpifac,tpirzero,tpirzero2
+  real :: tpifac,tpirzero
   integer :: izone, izonedim
   real, allocatable :: temp(:)
   integer :: ip
 
-  call tpi_factors(tpifac,tpirzero,tpirzero2)
+  call tpi_factors(tpifac,tpirzero)
 
   numelms = local_elements()
 
