@@ -1,6 +1,6 @@
        0  0.0000E+00  3.8333E-06  5.0000E-02    0.0000E+00  3.8333E-06  0.0000E+00    4.1049E-01  1.2798E+03  5.3537E-01    1.28070E+03
-       1  2.0000E+01  6.8288E-06  1.4048E-02    2.6163E-06  4.2038E-06  8.6249E-09    4.1019E-01  1.2798E+03  5.3555E-01    1.28070E+03
-       2  4.0000E+01  5.4056E-06 -5.8162E-03    2.0955E-07  5.1920E-06  4.1091E-09    4.1004E-01  1.2798E+03  5.3548E-01    1.28070E+03
-       3  6.0000E+01  6.6472E-06  5.1505E-03    2.1986E-08  6.6237E-06  1.5289E-09    4.0994E-01  1.2798E+03  5.3549E-01    1.28070E+03
-       4  8.0000E+01  8.4495E-06  5.9692E-03    1.4930E-08  8.4324E-06  2.1163E-09    4.0985E-01  1.2798E+03  5.3549E-01    1.28070E+03
-       5  1.0000E+02  1.0571E-05  5.5778E-03    1.5214E-08  1.0553E-05  3.1709E-09    4.0977E-01  1.2798E+03  5.3549E-01    1.28070E+03
+       1  2.0000E+01  6.8288E-06  1.4048E-02    2.6163E-06  4.2038E-06  8.6249E-09    4.1018E-01  1.2798E+03  5.3555E-01    1.28070E+03
+       2  4.0000E+01  5.4056E-06 -5.8164E-03    2.0960E-07  5.1919E-06  4.1105E-09    4.1004E-01  1.2798E+03  5.3548E-01    1.28070E+03
+       3  6.0000E+01  6.6471E-06  5.1504E-03    2.1971E-08  6.6236E-06  1.5274E-09    4.0996E-01  1.2798E+03  5.3549E-01    1.28070E+03
+       4  8.0000E+01  8.4497E-06  5.9702E-03    1.4873E-08  8.4327E-06  2.1104E-09    4.0991E-01  1.2798E+03  5.3549E-01    1.28070E+03
+       5  1.0000E+02  1.0573E-05  5.5798E-03    1.5130E-08  1.0554E-05  3.1614E-09    4.0989E-01  1.2798E+03  5.3550E-01    1.28070E+03
